[package]
name = "linspace"
version = "0.2.7"
edition = "2024"
license = "MIT"
description = "Turns a range into a linearly spaced sequence of values."
repository = "https://github.com/sigurd4/linspace"
keywords = ["linear", "numpy", "spacing", "iterators", "numeric"]
categories = ["rust-patterns", "no-std::no-alloc"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
bulks = ["dep:bulks"]

[dependencies]
rustversion = "1.0.22"
numscale = "0.2.0"
bulks = { version = "0.4.0", default-features = false, optional = true }
moddef = "0.3.0"